<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">



    <com.example.hwcustomviews.MovieTileView
        android:id="@+id/mtvExample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:genreText="@string/genre_placeholder"
        app:posterDrawable="@drawable/plus"
        app:priceText="@string/price_placeholder"
        app:titleText="@string/title_placeholder"
        android:layout_margin="@dimen/padding"/>

    <Button
        android:id="@+id/bChangeTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_tile"/>

</LinearLayout>